- updated ui for currency textboxes

--- a/BullCurrency/Views/RazorView.cshtml
+++ b/BullCurrency/Views/RazorView.cshtml
@@ -26,6 +26,12 @@
             var elm = document.getElementById('label');
             elm.innerHTML = text;
         }
+
+        //invoke converting home currency to destination currency
+        function InvokeConvertDestinationCurrency(text) {
+            
+        }
+
     </script>
 </head>
 <body>
@@ -48,7 +54,7 @@
                     <input type="text" id="txtDestinationCurrency" name="txtDestinationCurrenty"/>
 
                     <label class="label-text">How much would you like?</label>
-                    <input type="text" id="txtFromAmount" name="txtFromAmount"/>
+                    <input type="text" id="txtAmount" name="txtAmount"/>
                     <label class="normal-label">GBP</label>
                     <label class="normal-label">=</label>
                     <input type="text" id="txtDestinationAmount" name="txtDestinationAmount"/>
