--- a/BullCurrency_AndroidApp/Resources/layout/Main.axml
+++ b/BullCurrency_AndroidApp/Resources/layout/Main.axml
@@ -2,4 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
+<!--<TextView
+        android:id="@+id/lblBuyCurrency"
+        android:text="@string/BuyCurrency"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/lblHolidayCountDown"
+        android:text="@string/HolidayCountDown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />-->
+    <FrameLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/frameLayout1" />
+</LinearLayout>
